add saving weight at the last cell in notebooks

--- a/torcheeg_atcnet.ipynb
+++ b/torcheeg_atcnet.ipynb
@@ -229,6 +229,12 @@
    "source": [
     "DEVICE = 'gpu' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
+    "model = ATCNet(\n",
+    "    num_classes=4,\n",
+    "    num_electrodes=22,\n",
+    "    chunk_size=7*250,\n",
+    ")\n",
+    "\n",
     "for i, (train_dataset, val_dataset) in enumerate(k_fold.split(dataset)):\n",
     "    train_loader = DataLoader(\n",
     "        dataset=train_dataset,\n",
@@ -242,13 +248,6 @@
     "        shuffle=False,\n",
     "        num_workers=4\n",
     "    )\n",
-    "\n",
-    "    model = ATCNet(\n",
-    "        num_classes=4,\n",
-    "        num_electrodes=22,\n",
-    "        chunk_size=7*250,\n",
-    "    )\n",
-    "\n",
     "    trainer = ClassifierTrainer(\n",
     "        model=model,\n",
     "        num_classes=4,\n",
@@ -288,7 +287,12 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "atc_weights_path = './weights/atc_weights.pt'\n",
+    "torch.save(model.state_dict(), atc_weights_path)\n",
+    "# to load weight:\n",
+    "# model.load_state_dict(torch.load(atc_weights_path))"
+   ]
   }
  ],
  "metadata": {
