--- a/cwt_preprocessed.ipynb
+++ b/cwt_preprocessed.ipynb
@@ -18,9 +18,33 @@
         "drive.mount('/content/drive',force_remount=True)"
       ],
       "metadata": {
-        "id": "j_NbHZzX4lhL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j_NbHZzX4lhL",
+        "outputId": "b950532e-8cd8-488e-ddd5-f314a0c78692"
       },
       "id": "j_NbHZzX4lhL",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install torcheeg"
+      ],
+      "metadata": {
+        "id": "VtlNf9695qnF"
+      },
+      "id": "VtlNf9695qnF",
       "execution_count": null,
       "outputs": []
     },
@@ -30,11 +54,29 @@
         "!git clone https://github.com/nmq443/cognitive-science-final-project.git"
       ],
       "metadata": {
-        "id": "sTs2JbN24z-1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sTs2JbN24z-1",
+        "outputId": "d5bc337e-2876-4a30-dd59-62b9cee62a01"
       },
       "id": "sTs2JbN24z-1",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'cognitive-science-final-project'...\n",
+            "remote: Enumerating objects: 219, done.\u001b[K\n",
+            "remote: Counting objects: 100% (52/52), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
+            "remote: Total 219 (delta 18), reused 22 (delta 5), pack-reused 167\u001b[K\n",
+            "Receiving objects: 100% (219/219), 5.59 MiB | 13.19 MiB/s, done.\n",
+            "Resolving deltas: 100% (98/98), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -47,12 +89,12 @@
         "id": "T88-R16Q4322"
       },
       "id": "T88-R16Q4322",
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "ee09e2b2-8d07-4613-8c2b-e7d311b06bf6",
       "metadata": {
         "id": "ee09e2b2-8d07-4613-8c2b-e7d311b06bf6"
@@ -91,22 +133,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "b3ae86d3-493c-4cff-9223-d6c4ac6c7e60",
       "metadata": {
-        "id": "b3ae86d3-493c-4cff-9223-d6c4ac6c7e60",
-        "outputId": "447f1d9f-61f1-42b4-b1dd-dfece475bab0"
+        "id": "b3ae86d3-493c-4cff-9223-d6c4ac6c7e60"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2024-05-20 09:18:23.298895: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import time\n",
         "import shutil\n",
@@ -275,7 +307,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# If run on local machine\n",
+        "# root_data_path = '/home/quang'\n",
+        "# If run on colab\n",
+        "root_data_path = '/content/drive/MyDrive'"
+      ],
+      "metadata": {
+        "id": "uSnLeqyE5Xec"
+      },
+      "id": "uSnLeqyE5Xec",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "id": "ad597813-0ed4-4f17-a461-4975e124fcdd",
       "metadata": {
         "id": "ad597813-0ed4-4f17-a461-4975e124fcdd"
@@ -290,7 +337,7 @@
         "    n_sub = 9\n",
         "    n_classes = 4\n",
         "    classes_labels = ['Left hand', 'Right hand','Foot','Tongue']\n",
-        "    data_path = os.path.expanduser('/home/quang') + '/BCI Competition IV/BCI Competition IV-2a/BCI Competition IV 2a mat/'\n",
+        "    data_path = os.path.expanduser(root_data_path) + '/BCI Competition IV/BCI Competition IV-2a/BCI Competition IV 2a mat/'\n",
         "\n",
         "    # Create a folder to store the results of the experiment\n",
         "    results_path = os.getcwd() + \"/results\"\n",
@@ -318,30 +365,20 @@
       "execution_count": null,
       "id": "90be248d-2897-4584-a340-bbd8dce39af7",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "90be248d-2897-4584-a340-bbd8dce39af7",
-        "outputId": "2ba72c95-cb05-4dbb-e30a-315148f65ca6"
+        "outputId": "df3cfbeb-f57f-4119-8f56-daffd54468fc"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "Training on subject  1\n",
             "Performing discrete CWT convolutions...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/tmp/ipykernel_60710/1007441136.py:26: DeprecationWarning: scipy.signal.cwt is deprecated in SciPy 1.12 and will be removed\n",
-            "in SciPy 1.15. We recommend using PyWavelets instead.\n",
-            "\n",
-            "  X_cwt[trial,eeg,:,:] = np.abs(signal.cwt(np.squeeze(X[trial,:, eeg,]),signal.morlet2,widths,w=w))\n",
-            "2024-05-20 09:21:06.194745: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2024-05-20 09:21:06.195513: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n"
           ]
         }
       ],
@@ -352,8 +389,6 @@
         "from utils import getModel\n",
         "import time\n",
         "import os\n",
-        "import torcheeg\n",
-        "import torcheeg.transforms as transforms\n",
         "\n",
         "run()"
       ]
