still run out of ram

--- a/cwt_preprocessed.ipynb
+++ b/cwt_preprocessed.ipynb
@@ -116,7 +116,6 @@
     "widths = w * fs / (2 * freq * np.pi)\n",
     "\n",
     "X_cwt = np.zeros((num_trials, num_eegs, widths.shape[0], num_samples))\n",
-    "X_cwt = []\n",
     "\n",
     "for trial in range(num_trials):\n",
     "    for in_ in range(num_inputs):\n",
@@ -127,7 +126,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "id": "f8156645-7397-4ffd-99fb-87751b49df8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "288\n",
+      "1\n",
+      "22\n",
+      "1125\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X = np.random.rand(288, 1, 22, 1125)\n",
+    "num_trials, num_inputs, num_eegs, num_samples = X.shape\n",
+    "print(num_trials)\n",
+    "print(num_inputs)\n",
+    "print(num_eegs)\n",
+    "print(num_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "99b6aeaa-fd93-4b5e-935e-9d1f504be891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs = 250\n",
+    "freq_range = (1, 15)\n",
+    "freq_bins = 100\n",
+    "w = 5\n",
+    "freq = np.linspace(freq_range[0],freq_range[1],freq_bins)\n",
+    "widths = w * fs / (2 * freq * np.pi)\n",
+    "print(widths.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7dc440-3606-4833-9784-2e0334c38c81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n",
+      "(22, 128, 1125)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from torcheeg.transforms import CWTSpectrum\n",
+    "\n",
+    "t = CWTSpectrum()\n",
+    "\n",
+    "# X_cwt = np.zeros((num_trials, widths.shape[0], num_eegs, num_samples))\n",
+    "\n",
+    "X_cwt = []\n",
+    "for trial in range(num_trials):\n",
+    "    for in_ in range(num_inputs):\n",
+    "        transformed = t(eeg=X[trial, in_, :, :])['eeg']\n",
+    "        print(transformed.shape)\n",
+    "        X_cwt.append(transformed)\n",
+    "\n",
+    "print(X_cwt.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4a0c28fc-7871-44c5-afac-40ac3e7b4510",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(288, 100, 22, 1125)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_cwt = np.zeros((num_trials, widths.shape[0], num_eegs, num_samples))\n",
+    "print(X_cwt.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "ee09e2b2-8d07-4613-8c2b-e7d311b06bf6",
    "metadata": {
     "id": "ee09e2b2-8d07-4613-8c2b-e7d311b06bf6"
@@ -154,24 +540,35 @@
     "    # values for cwt\n",
     "    freq = np.linspace(freq_range[0],freq_range[1],freq_bins)\n",
     "    widths = w * fs / (2 * freq * np.pi)\n",
-    "    X_cwt = np.zeros((N_trials,N_eegs,widths.shape[0],time_bins))\n",
+    "    X_cwt = np.zeros((N_trials,widths.shape[0],N_eegs,time_bins))\n",
     "\n",
     "    print('Performing discrete CWT convolutions...')\n",
     "    for trial in range(N_trials):\n",
     "        for eeg in range(N_eegs):\n",
-    "            X_cwt[trial,eeg,:,:] = np.abs(signal.cwt(np.squeeze(X[trial,:, eeg,]),signal.morlet2,widths,w=w))\n",
+    "            X_cwt[trial,:,eeg,:] = np.abs(signal.cwt(np.squeeze(X[trial,:,eeg,]),signal.morlet2,widths,w=w))\n",
     "\n",
     "    return X_cwt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "b3ae86d3-493c-4cff-9223-d6c4ac6c7e60",
    "metadata": {
     "id": "b3ae86d3-493c-4cff-9223-d6c4ac6c7e60"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-21 18:06:09.739687: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-05-21 18:06:10.068503: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-05-21 18:06:10.803562: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import shutil\n",
@@ -340,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "uSnLeqyE5Xec",
    "metadata": {
     "id": "uSnLeqyE5Xec"
@@ -348,14 +745,14 @@
    "outputs": [],
    "source": [
     "# If run on local machine\n",
-    "# root_data_path = '/home/quang'\n",
+    "root_data_path = '/home/quang'\n",
     "# If run on colab\n",
-    "root_data_path = '/content/drive/MyDrive'"
+    "# root_data_path = '/content/drive/MyDrive'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "ad597813-0ed4-4f17-a461-4975e124fcdd",
    "metadata": {
     "id": "ad597813-0ed4-4f17-a461-4975e124fcdd"
@@ -410,8 +807,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training on subject  1\n",
-      "Performing discrete CWT convolutions...\n"
+      "Training on subject  1\n"
      ]
     }
    ],
@@ -457,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
