--- a/torcheeg_atcnet_with_preprocessed_data.ipynb
+++ b/torcheeg_atcnet_with_preprocessed_data.ipynb
@@ -1550,7 +1550,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1564,7 +1564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.8"
   },
   "papermill": {
    "default_parameters": {},
@@ -1702,11 +1702,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_3f124d0a37c34b3880cf346a4229bb57",
-       "max": 20.0,
-       "min": 0.0,
+       "max": 20,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f971ca3ab9994893b9782b37c25b34f8",
-       "value": 20.0
+       "value": 20
       }
      },
      "0b48e64f3d764c96976dcd2902ab61bf": {
@@ -2157,11 +2157,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_aa74074e46e64c9c81d922080955d681",
-       "max": 54.0,
-       "min": 0.0,
+       "max": 54,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_24e0b730ccca4288bde79eec1890a674",
-       "value": 54.0
+       "value": 54
       }
      },
      "3a1390c50cd04ba78fd75d5d35064af1": {
@@ -2306,11 +2306,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_11b572011681411e9851b167a4da5792",
-       "max": 16.0,
-       "min": 0.0,
+       "max": 16,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_9b55beef312a49658f28ecbc31f037c8",
-       "value": 16.0
+       "value": 16
       }
      },
      "4631da7daa1b45339d60c450e58d38f5": {
@@ -3272,11 +3272,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_6f3f47f4a3c346a68542587a05beae8d",
-       "max": 55.0,
-       "min": 0.0,
+       "max": 55,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_af39b72a284e45d0b91b1f24c1d70f3e",
-       "value": 55.0
+       "value": 55
       }
      },
      "a8ca2be8e2a346658d74687f1c32f1ad": {
@@ -3369,11 +3369,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_902854e922df424ca5fb3d47f9f68eba",
-       "max": 20.0,
-       "min": 0.0,
+       "max": 20,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_df7da76ca6f74cbea90b0ad555e0207f",
-       "value": 20.0
+       "value": 20
       }
      },
      "adf9021992b8424cbbe41d0bc9883a92": {
@@ -3482,11 +3482,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_716a599ea272447296516cdfe9f10228",
-       "max": 19.0,
-       "min": 0.0,
+       "max": 19,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_207b961cfe5048a7a05ba244721215c9",
-       "value": 19.0
+       "value": 19
       }
      },
      "b4f1d13e00f844d9ae19b422035b6ba6": {
@@ -3818,11 +3818,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_f1bad9aa0a634b738a60bd63215de588",
-       "max": 56.0,
-       "min": 0.0,
+       "max": 56,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e0b8306bddf04dc7bd5ec9072580a72b",
-       "value": 56.0
+       "value": 56
       }
      },
      "d8870bc6789c4e1982f7a8f3340fe238": {
@@ -4005,11 +4005,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_157fa544d7734fa19a8be9ed2c10b67d",
-       "max": 58.0,
-       "min": 0.0,
+       "max": 58,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_c0fe7aa70ae442329dafc0e06221aae4",
-       "value": 58.0
+       "value": 58
       }
      },
      "e0b8306bddf04dc7bd5ec9072580a72b": {
